[fix] (ABC-930): Use padding and negative margin instead of gap
Prevent items to exceed 100% of the layout width because of gap

--- a/src/modules/base/layoutItem/layoutItem.css
+++ b/src/modules/base/layoutItem/layoutItem.css
@@ -33,4 +33,6 @@
 :host {
     max-width: 100%;
     min-width: 0;
+    padding: calc(var(--private-layout-spacing-block-between) / 2)
+        calc(var(--private-layout-spacing-inline-between) / 2);
 }
